--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "7zip-bin": "^5.1.1",
     "argparse": "^2.0.1",
-    "fs-extra": "^10.0.0",
+    "globby": "^11.0.3",
     "tar": "^6.1.0"
   }
 }
