--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "version": "0.1.3",
   "name": "@kmamal/packager",
-  "description": "Bundles a Node.js application into a self-contained zip archive",
+  "description": "Bundles a Node.js application into a self-contained zip",
   "keywords": [
     "package",
     "packager",
     "bundle",
     "bundler",
     "release",
-    "distribution"
+    "distribution",
+    "zip"
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:kmamal/packager.git"
+    "url": "git+ssh://git@github.com:kmamal/packager.git"
   },
-  "main": "src/index.js",
-  "bin": "./bin/packager",
   "license": "MIT",
+  "main": "./src/index.js",
+  "exports": "./src/index.js",
+  "bin": "./bin/packager",
   "dependencies": {
     "7zip-bin": "^5.2.0",
     "argparse": "^2.0.1",
-    "globby": "^13.1.2",
-    "tar": "^6.1.12"
+    "ejs": "^3.1.9",
+    "globby": "^14.0.1",
+    "tar": "^6.2.0"
   }
 }
